kubernetes/overlays/apps/infra/applications/gitlab-ci/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab-ci
  labels:
    app: gitlab-ci
