kubernetes/overlays/apps/infra/applications/gitlab-ci/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: gitlab-ci
spec:
  podSelector: {}
  policyTypes: [Ingress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-runner-ingress
  namespace: gitlab-ci
spec:
  podSelector: {}
  policyTypes: [Ingress]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: gitlab
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ci-egress
  namespace: gitlab-ci
spec:
  podSelector: {}
  policyTypes: [Egress]
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          app: gitlab
  - to:
    - namespaceSelector:
        matchLabels:
          role: ingress-controller
  - to:
    - ipBlock:
        cidr: REDACTED_IP/0
        except:
          - REDACTED_IP/16
          - REDACTED_IP/16
